force-app/main/default/objects/Recurring_Gift_Amendment__c/Recurring_Gift_Amendment__c.object-meta.xml
<CustomObject>
    <label>Recurring Gift Amendment</label>
    <nameField>
        <displayFormat>RGA-{0000}</displayFormat>
        <label>Recurring Gift Amedment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Gift Amendments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>