force-app/main/default/objects/Recurring_Gift_Amendment__c/fields/Campaign_to_Credit__c.field-meta.xml
<CustomField>
    <fullName>Campaign_to_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which campaign is this upgrade for.  i.e. telemarketing etc.</inlineHelpText>
    <label>Campaign to Credit</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Recurring Gift Amendments</relationshipLabel>
    <relationshipName>Recurring_Gift_Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>