force-app/main/default/objects/Recurring_Gift_Amendment__c/fields/Change_In_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Change_In_Gift_Amount__c</fullName>
    <inlineHelpText>Negative for downgrades, positive for upgrades.</inlineHelpText>
    <label>Change In Gift Amount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>