force-app/main/default/objects/Recurring_Gift_Amendment__c/fields/Date_From__c.field-meta.xml
<CustomField>
    <fullName>Date_From__c</fullName>
    <defaultValue>today()</defaultValue>
    <inlineHelpText>Date this change should be applied from</inlineHelpText>
    <label>Date From</label>
    <type>Date</type>
</CustomField>