force-app/main/default/objects/Recurring_Gift_Amendment__c/fields/Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reason_Notes__c</fullName>
    <label>Reason/Notes</label>
    <type>TextArea</type>
</CustomField>